specs/001-typescript-to-zig-native/examples/invalid/compound-assignment-type.ts
let name = "agent";

name += 1;
